Add necessary infrastructure
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,7 @@
-{clean_files, ["ebin/*.beam", "ebin/*.app", "src/*~"]}.
+{pre_hooks, [{compile, "sed -e \"s,%VSN%,${VSN},g;s,%DATE%,${BUILD_DATE},g\" priv/radiusproxy.spec.in > priv/radiusproxy.spec"}]}.
+{post_hooks, [{compile, "sed -i -e \"s,%VSN%,${VSN},g\" ebin/radiusproxy.app"}]}.
+
+{clean_files, ["ebin/*.beam", "ebin/*.app", "src/*~", "priv/radiusproxy.spec"]}.
 {cover_enabled, true}.
 {erl_opts, [debug_info]}.
 
