--- a/priv/radiusproxy.config
+++ b/priv/radiusproxy.config
@@ -1,7 +1,9 @@
-[{radiusproxy,
-	[
-		{listen_address, {{127,0,0,1}, 8889}},
-		{radius_servers, [[{192,168,1,100},1813,"testpass"]]},
-	]
-}].
+[
+	{radiusproxy,
+		[
+			{listen_address, {{127,0,0,1}, 8889}},
+			{radius_servers, [[{192,168,1,100},1813,"testpass"]]}
+		]
+	}
+].
 
